$1953 react-select/tooltip - z-index fix

--- a/entrypoints/popup/components/Tooltip/Tooltip.module.scss
+++ b/entrypoints/popup/components/Tooltip/Tooltip.module.scss
@@ -14,7 +14,7 @@
   z-index: 1;
 
   &:hover {
-    z-index: 9999;
+    z-index: 10;
   }
 
   &.bottom {
@@ -36,7 +36,7 @@
     transform: translateX(-5px);
     transition: background-color .3s ease-in-out;
     position: relative;
-    z-index: 9999;
+    z-index: 10;
 
     @include m.darkMode {
       background-color: rgba(v.$hover-color-dark, 0);
@@ -53,7 +53,7 @@
         transform: translateY(0);
         opacity: 1;
         pointer-events: auto;
-        z-index: 9999;
+        z-index: 10;
       }
     }
 
